Added new files created, and modified the git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -407,4 +407,7 @@ $RECYCLE.BIN/
 *.max
 
 .vscode
+PetAdoptionHouse/index/static/admin
+PetAdoptionHouse/index/static/django_extensions
+PetAdoptionHouse/index/migrations
 # End of https://www.toptal.com/developers/gitignore/api/images
