Added profile and adoptions pages, a way to accept or decline them and update the adoption status and pet availability

--- a/.gitignore
+++ b/.gitignore
@@ -411,3 +411,4 @@ PetAdoptionHouse/index/static/admin
 PetAdoptionHouse/index/static/django_extensions
 PetAdoptionHouse/index/migrations
 # End of https://www.toptal.com/developers/gitignore/api/images
+PetAdoptionHouse/logs
